Criados nova classe e inteface para os produtos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/comparex
+# Thymeleaf
+spring.thymeleaf.cache = false
+
+
+
+spring.datasource.url=jdbc:sqlite:data.db
 spring.datasource.username= comparex
 spring.datasource.password= 
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = com.enigmabridge.hibernate.dialect.SQLiteDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
