--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'org.xerial:sqlite-jdbc:3.8.11.2'
+	compile 'com.enigmabridge:hibernate4-sqlite-dialect:0.1.2'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
