--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
 	testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
 	testImplementation "io.cucumber:cucumber-junit:${cucumberVersion}"
+	testImplementation 'junit:junit:4.12'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -28,14 +29,16 @@ dependencies {
 	}
 }
 
-test {
-	useJUnitPlatform()
-}
 configurations {
     cucumberRuntime {
         extendsFrom testImplementation
     }
 }
+
+task partTest( type: Test ){
+	exclude '**/e2e/**'
+}
+
 task cucumber() {
     dependsOn assemble, compileTestJava
     doLast {
