--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
  - ./gradlew cucumber
 
 after_script:
-- "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+ - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
